syntax = "proto3";

option go_package = "/adminProto";

import "google/protobuf/timestamp.proto";

service AdminService{
  rpc GetUserStatistics (UserInfo) returns (UserStatistics);
}

message UserInfo {
  uint32 tgId = 1;
}

message UserStatistics {
  uint32 tgId = 1;
  uint32 chatId = 2;
  repeated Message messages = 3;
}

message Message {
  string message = 1;
  google.protobuf.Timestamp created_at = 2;
}
